--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   publish = "build"
-	command = "make html"
+	command = "make html; mv build/html build/docs; echo '/		/docs' > _redirects"
